// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Checks that StepActions snapshots didn't change > renders StepActions with back button 1`] = `
<body>
  <div>
    <div
      class="MuiStack-root css-1ld03z9-MuiStack-root"
    >
      <span
        class=""
        data-mui-internal-clone-element="true"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium css-1rwt2y5-MuiButtonBase-root-MuiButton-root"
          tabindex="0"
          type="button"
        >
          label
          <span
            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </button>
      </span>
    </div>
  </div>
</body>
`;

exports[`Checks that StepActions snapshots didn't change > renders StepActions with back link  1`] = `
<body>
  <div>
    <div
      class="MuiStack-root css-1ld03z9-MuiStack-root"
    >
      <span
        class=""
        data-mui-internal-clone-element="true"
      >
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium css-uiszrq-MuiTypography-root-MuiLink-root-MuiButtonBase-root-MuiButton-root"
          href="/it/termini-di-servizio"
          tabindex="0"
        >
          label
          <span
            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </a>
      </span>
    </div>
  </div>
</body>
`;

exports[`Checks that StepActions snapshots didn't change > renders StepActions with back link disabled 1`] = `
<body>
  <div>
    <div
      class="MuiStack-root css-1ld03z9-MuiStack-root"
    >
      <span
        class=""
        data-mui-internal-clone-element="true"
        tabindex="0"
      >
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium css-uiszrq-MuiTypography-root-MuiLink-root-MuiButtonBase-root-MuiButton-root"
          href="/it/termini-di-servizio"
          tabindex="0"
        >
          label
          <span
            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </a>
      </span>
    </div>
  </div>
</body>
`;

exports[`Checks that StepActions snapshots didn't change > renders StepActions with forward and back button disabled 1`] = `
<body>
  <div>
    <div
      class="MuiStack-root css-1itaudw-MuiStack-root"
    >
      <span
        class=""
        data-mui-internal-clone-element="true"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium css-1rwt2y5-MuiButtonBase-root-MuiButton-root"
          tabindex="0"
          type="button"
        >
          label
          <span
            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </button>
      </span>
      <span
        class=""
        data-mui-internal-clone-element="true"
        tabindex="0"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium Mui-disabled MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium css-sghohy-MuiButtonBase-root-MuiButton-root"
          disabled=""
          tabindex="-1"
          type="submit"
        >
          label
        </button>
      </span>
    </div>
  </div>
</body>
`;

exports[`Checks that StepActions snapshots didn't change > renders StepActions with forward button 1`] = `
<body>
  <div>
    <div
      class="MuiStack-root css-14w2gry-MuiStack-root"
    >
      <span
        class=""
        data-mui-internal-clone-element="true"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium css-sghohy-MuiButtonBase-root-MuiButton-root"
          tabindex="0"
          type="button"
        >
          label
          <span
            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </button>
      </span>
    </div>
  </div>
</body>
`;

exports[`Checks that StepActions snapshots didn't change > renders StepActions with forward submit disabled 1`] = `
<body>
  <div>
    <div
      class="MuiStack-root css-14w2gry-MuiStack-root"
    >
      <span
        class=""
        data-mui-internal-clone-element="true"
        tabindex="0"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium Mui-disabled MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium css-sghohy-MuiButtonBase-root-MuiButton-root"
          disabled=""
          tabindex="-1"
          type="submit"
        >
          label
        </button>
      </span>
    </div>
  </div>
</body>
`;
